--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-async-handler": "^1.2.0",
+    "mongoose": "^8.7.1",
     "nodemon": "^3.1.7"
   }
 }
